--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
 
 <body>
   <app-root></app-root>
+  <link rel="modulepreload" href="chunk-4DEPLZOH.js"><link rel="modulepreload" href="chunk-SXQVUR2A.js"><link rel="modulepreload" href="chunk-2XE4O6AU.js"><link rel="modulepreload" href="chunk-JVPYE6XL.js"><link rel="modulepreload" href="chunk-GYMOEWCA.js"><link rel="modulepreload" href="chunk-7KY5EJKB.js"><link rel="modulepreload" href="chunk-G3CV3VGG.js"><link rel="modulepreload" href="chunk-JX3TYZ34.js"><link rel="modulepreload" href="chunk-RUY5SX76.js"><link rel="modulepreload" href="chunk-NIOQNOHM.js"><script src="polyfills-4BK4MXU4.js" type="module"></script><script src="main-WIIB6NKF.js" type="module"></script></body>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
 </html>
